assets/styles/layout/_homeProject.scss
.container--visible .project{
	opacity: 1;
}

.project{
	@include size(100%, 100vh);
	position: relative;
	display: flex;
	overflow: hidden;
	font-family: 'Aktiv Grotesk Corp';
	opacity: 0;
	transition: opacity 1s ease-in;
	flex-direction: column;
	justify-content: space-between;

	@include homeMedium{
		flex-direction: row;
		// width: 140%;
	}

	@include homeSemiLarge{
		flex-direction: row;
		// width: 140%;
	}

}

.project__informationsContainer{
	display: flex;
	justify-content: inherit;
   	flex-direction: column;
   	padding: 0% 35% 0% 5%;

   	@include homeMedium{
		padding: 0 35% 0% 5%;
	}

	@include homeSemiLarge{
		padding: 0 35% 0% 135px;
	}
}

.project__titleBox{
	position: absolute;
	height: 60px;
	width: 350px;
	bottom: 60px;
	font-size: 24px;
	line-height: 24px;
	overflow: hidden;
	z-index: 10;
	opacity: 0;
    transition: 800ms 300ms cubic-bezier(.19,1,.22,1);

	@include homeSmallMobile{
		bottom: 0;
	}

	@include homeMedium{
		bottom: 70px;
	}

	@include homeSemiLarge{
		bottom: 160px;
	}

	@include homeLarge{
		bottom: 300px;
	}

}

.container--visible .project__titleBox {
    opacity: 1;
    transition: 800ms 300ms cubic-bezier(.19,1,.22,1);
} 

.project__titleLink:visited {
	color: #353535;
}

.project__title{
	top: 100%;
    height: 60px;
	position: absolute;
	z-index: 20;
	transition: transform 1200ms cubic-bezier(0.77, 0, 0.175, 1);
	font-family: 'ITC Avant Garde Pro';

	a{
		color: #000;
		text-decoration: none;
	}

}

.project__description, .project__see{
	line-height: 1.5;
	font-weight: 500;
	z-index: 20;
	position: absolute;
	bottom: 0;
}

.project__descriptionBox {
	position: absolute;
	bottom: 115px;
	overflow:hidden;
	width: 300px;
	height: 100px;
	display: none;
	opacity: 0;
    transition: 800ms 300ms cubic-bezier(.19,1,.22,1);

	@include homeSmall{
	}

	@include homeSemiLarge{
	    width: 300px;
	    bottom: 70px;
	    display: block;
	}

	@include homeLarge{
		bottom: 200px;
		display: block;
	}
}

.container--visible .project__descriptionBox {
    opacity: 1;
    transition: 800ms 300ms cubic-bezier(.19,1,.22,1);
} 

.project__description{
	top: 100%;
	height: 100px;
	font-weight: normal;
	position: absolute;
	transition: transform 1200ms cubic-bezier(0.77, 0, 0.175, 1);		
	color: #8E9093;
}

.project__see{
	position: absolute;
	bottom: 40px;
	cursor: pointer;
	height: 25px;
	width: 170px;
	overflow: hidden;
	opacity: 0;
	display: none;
	transition: cubic-bezier(0.645, 0.045, 0.355, 1);
	transform: translateX(-60px);
	transition-duration: 0.9s;
	// transition-delay: 3.5s;

	/* @include homeSmall{
		display: none;
	} */
	
	@include homeMedium{
		display: block;
		bottom: 30px;
	}

	@include homeLarge{
		bottom: 120px;
	}
}

.container--visible .project__see {
	transition: all cubic-bezier(0.645, 0.045, 0.355, 1);
	transition-duration: 0.9s;
	transform: translateX(0);
	opacity: 1;
	// transition-delay: 3.5s;
}

.project__link {
	top: 100%;
	position: absolute;
	display: block;
	height: 25px;
	color: #353535;
    text-decoration: none;
	transition: transform 1200ms cubic-bezier(0.77, 0, 0.175, 1);

	&:before{
		transform: scaleX(1);
		transition: all .8s cubic-bezier(.19,1,.22,1);
		transform-origin: 0 0;
		content: '';
		display: inline-block;
		padding: 0 0 1.5px 0;
		width: 20px;
		background: #000;
		vertical-align: middle;
		margin-right: 30px;
		cursor: pointer;
	}

	&:hover:before{
		transform: scaleX(1.8);
		transition: all .8s cubic-bezier(.19,1,.22,1);
		margin-right: 50px;
	}
}

.project__imgContainer{
	@include size(50%);

	@include homeSemiLarge{
		@include size(43%);
	}
}

.project__imageFrontBox{
	@include size(100%);
	overflow: hidden;
	z-index: 10;
	top: calc(50% - 112.5px);
	left: 0;
	position: absolute;
	width: 260px;
	height: 165px;
	transform: translateY(-150%);
	transition: transform 800ms cubic-bezier(0.85, 0, 0.24, 0.99);

	@include homeSmallMobile {
		top: 20%;
	    width: 210px;
    	height: 137px;
	}

	@include homeSmall {
		top: 20%;
	    width: 400px;
    	height: 265px;
	}

	@include homeMedium{
	    width: 480px;
    	height: 310px;
	}

	@include homeSemiLarge{
		width: 530px;
		height: 350px;
	}

	@include homeLarge{
		width: 610px;
		left: 460px;
		height: 400px;
	}

	@include homeUltraLarge{
		width: 680px;
		left: 580px;
		height: 448px;
	}
	
/* 	resize this container for anim on .project__imageFront
	@media screen and (max-width: 600px) {
        height: 235px;
    }
    @media screen and (min-width: 600px) and (max-width: 1000px) {
        height: 400px;
    }
    @media screen and (min-width: 1000px) {
        height: 450px;
    } */
}

.container--visible .project__imageFrontBox {
	transform: translateY(0);
	transition: transform 800ms cubic-bezier(0.85, 0, 0.24, 0.99);
}

.project__imageFront{
	position: absolute;
	top: 100%;
	z-index: 0;
	transition: transform 800ms cubic-bezier(0.85, 0, 0.24, 0.99);
	width: 260px;

    @include homeSmallMobile{
		width: 210px;
	}

	@include homeSmall{
		width: 400px;
	}

	@include homeMedium{
		width: 480px;
	}

    @include homeSemiLarge{
		width: 610px;
	}

	@include homeUltraLarge{
		width: 680px;
	}
	
}

.project__imageBox{
	@include size(90%,100vh);
	position: relative;
	display: flex;
	transform: translateY(150%);
	transition: transform 800ms cubic-bezier(0.85, 0, 0.24, 0.99);
	// justify-content: center;
	@include homeMedium{
		overflow: hidden;
	}

	// resize this container for anim on .project__imageBackground
	@media screen and (max-width: 600px) {
        // height: 460px;
        justify-content: flex-end;
    }
    @media screen and (min-width: 600px) and (max-width: 900px) {
        height: 100vh;
    }
    @media screen and (min-width: 900px) {
        height: 100vh;
    }
}

.container--visible .project__imageBox {
	transform: translateY(0);
	transition: transform 800ms cubic-bezier(0.85, 0, 0.24, 0.99);
}

.project__imageBackground{
	@include size(auto,500px);
	// top: 80px;
	position: absolute;
	top: 100%;
	z-index: 0;
	// transform: translateX(70px);
	transition: transform 800ms cubic-bezier(0.85, 0, 0.24, 0.99);

	@include homeSmall{
		@include size(auto,100vh);
		// position: static;
		// transform: translateX(-250px);
	}

	@include homeMedium{
		// transform: translateX(-190px);
	}

	@include homeSemiLarge{
		// transform: translateX(110px);
	}

}

